# gitrev

./: .travis.yml  Example.hs  README.md  gitrev.cabal
src/Development/: GitRev.hs
